# pheno-forge-plugins

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  SCOPE.md  SSOT.md  WORKLOG.md  llms.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
docs/: pr3-pointer.md
plugins/pheno-cognee/: README.md  SKILL.md  plugin.env  plugin.toml  spawn.sh
plugins/pheno-cognee/systemd/: pheno-cognee.service
plugins/pheno-config/: README.md  SKILL.md  plugin.env  plugin.toml
plugins/pheno-config/systemd/: pheno-config.service
plugins/pheno-letta/: README.md  SKILL.md  plugin.env  plugin.toml  teardown.sh
plugins/pheno-letta/systemd/: pheno-letta.service
plugins/pheno-mem0/: README.md  SKILL.md  plugin.env  plugin.toml
plugins/pheno-mem0/systemd/: pheno-mem0.service
plugins/pheno-supermemory/: README.md  SKILL.md  plugin.env  plugin.toml
plugins/pheno-supermemory/systemd/: pheno-supermemory.service
plugins/pheno-tracing/: README.md  SKILL.md  plugin.env  plugin.toml
plugins/pheno-tracing/systemd/: pheno-tracing.service
scripts/: build-tarball.sh  fetch-sidecars.sh  healthcheck.sh  install.sh  launch-sidecars.sh  spawn.sh  teardown.sh
systemd/: pheno-forge-sidecars.target
tests/: healthcheck.bats  spawn.bats  teardown.bats
